--- a/css/css.css
+++ b/css/css.css
@@ -1,5 +1,9 @@
 *{
-  color: white;
+  color: white;/*全局字体颜色*/
+}
+@font-face {
+  font-family: myfont;
+  src: url(../font/方正粗圆.ttf);
 }
 body{
   background-image:url("../imgs/background-imgs.png") ;
@@ -46,4 +50,46 @@ body{
   width: 28px;
   height: 21px;
   vertical-align: middle;
+}
+.firstbox{
+  font-family: myfont;
+}
+.firstbox h2{
+  color:	DarkSlateBlue;
+}
+.secondbox{
+  font-family: myfont;
+}
+.secondbox h2{
+  color:dodgerblue;
+}
+.thirdbox{
+  font-family: myfont;
+}
+.thirdbox h2{
+  color:MediumSpringGreen;
+}
+.fourthbox{
+  font-family: myfont;
+}
+.fourthbox h2{
+  color:	Yellow;
+}
+.ffifthbox{
+  font-family: myfont;
+}
+.fifthbox h2{
+  color:DarkOrange;
+}
+.sixthbox{
+  font-family: myfont;
+}
+.sixthbox h2{
+  color: NavajoWhite;
+}
+.seventhbox{
+  font-family: myfont;
+}
+.seventhbox h2{
+  color:	Aqua;
 }
