--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/css/css.css
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/css/css.css
@@ -1,6 +1,10 @@
 *{
   color: white;/*全局字体颜色*/
 }
+body{
+  margin: 0;
+  padding: 0;
+}
 @font-face {
   font-family: myfont;
   src: url(../font/方正粗圆.ttf);
@@ -13,12 +17,15 @@
   }
   .title{
     text-align: center;
-    color: purple;
+    color: rgb(255, 144, 40);
     font-family: myfont;
+    margin-top: 0;
+    background-color: rgba(10, 10, 10, 0.5);
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
   .all{
     display: block;
-    border: solid 1px black;
     width: 700px;
     margin: auto;
     background-color:rgba(6, 6, 6, 0.5);
@@ -39,6 +46,7 @@
   }
   .first p{
     display: inline-block;
+    font-family: 'myfont';
   }
   .Checkbox{
     margin-top: 40px;
@@ -102,40 +110,143 @@
   .allcompute{
     font-size: 10px;
     float: right;
-    position: fixed;
+    position: absolute;
     right: 10px;
-    top: 88px;
-    border: solid 2px black;
-    padding:18px 0px 0px 15px;
+    top: 125px;
+    padding:30px 0px 0px 15px;
     width: 455px;
     background-color: rgba(0, 0, 0, 0.7);
   }
+
+  .allcomputeFive{
+    font-size: 10px;
+    float: right;
+    position: fixed;
+    right: 10px;
+    top: 0px;
+    padding:30px 0px 0px 15px;
+    width: 455px;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  .allcompute > p{
+    font-size: 16px;
+    font-family: 'myfont';
+  }
+  .allcomputeFive > p{
+    font-size: 16px;
+    font-family: 'myfont';
+  }
+  .allcompute > p > input{
+    width: 19px;
+    height: 17px;
+    vertical-align: middle;
+    color: black;
+  }
+  .allcomputeFive > p > input{
+    width: 19px;
+    height: 17px;
+    vertical-align: middle;
+    color: black;
+  }
   .allcompute a{
-    font-size: 18px;
+    font-size: 25px;
     margin-left: 190px;
     color: black;
-    border-radius: 15px;
-    border: 3px solid black;
-    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: inset -6px -6px 16px rgb(76 76 76), -2px -2px 10px rgb(172 172 172);
+    padding: 5px 25px;
     text-decoration: none;
     background-color:white ;
+    font-family: 'myfont';
+  }
+  .allcomputeFive a{
+    font-size: 25px;
+    margin-left: 190px;
+    color: black;
+    border-radius: 5px;
+    box-shadow: inset -6px -6px 16px rgb(76 76 76), -2px -2px 10px rgb(172 172 172);
+    padding: 5px 25px;
+    text-decoration: none;
+    background-color:white ;
+    font-family: 'myfont';
   }
   .allcompute a:hover{
-    background-color: LightGrey;
+    background-color: white;
+    box-shadow:  inset 6px 6px 16px rgb(76 76 76), 2px 2px 10px rgb(172 172 172);
+  }
+  .allcomputeFive a:hover{
+    background-color: white;
+    box-shadow:  inset 6px 6px 16px rgb(76 76 76), 2px 2px 10px rgb(172 172 172);
   }
   .aspacing{
-    height: 30px;
+    height: 20px;
+  }
+  .star{
+    text-decoration: none;
+  }
+  .star:hover{
+    color: aqua;
   }
   .tips{
+    font-family: 'myfont';
+    font-size: 18px;
+    float: left;
+    position: absolute;
+    left: 10px;
+    top: 125px;
+    padding:0px 15px 15px 15px;
+    width: 455px;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+  .tipsFive{
+    font-family: 'myfont';
     font-size: 18px;
     float: left;
     position: fixed;
     left: 10px;
-    top: 88px;
-    border: solid 2px black;
-    padding:0px 0px 0px 15px;
+    top: 0px;
+    padding:0px 15px 15px 15px;
     width: 455px;
     background-color: rgba(0, 0, 0, 0.6);
+  }
+  .End{
+    background-color: rgba(0, 0, 0, 0.6);
+    margin-top: 50px;
+    position: relative;
+  }
+  .endk{
+    display: inline-block;
+    margin: 20px 20px 20px 145px;
+  }
+  .endk span{
+    font-size: 18px;
+    color: white;
+    font-family: 'myfont';
+    display: inline-block;
+    width: 200px;
+  }
+  .endth{
+    display: inline-block;
+    text-align: right;
+    margin-left: 100px;
+  }
+  .endth p{
+    margin: 0;
+    font-size: 18px;
+    font-family: 'myfont';
+    color: white;
+    display: inline-block;
+  }
+  .endf{
+    display: inline-block;
+    position: absolute;
+    right: 145px;
+  }
+  .endf p{
+    font-family: 'myfont';
+    font-size: 18px;
+    display: inline-block;
+    color: white;
   }
 }
 @media screen and (max-width: 960px){
@@ -223,29 +334,6 @@
   }
   .seventhbox h2{
     color:	orange;
-  }
-  .allcompute{
-    font-size: 5px;
-    float: right;
-    position: fixed;
-    right: 3px;
-    top: 88px;
-    border: solid 2px black;
-    padding:15px 0px 0px 15px;
-    width: 150px;
-  }
-  .allcompute a{
-    font-size: 8px;
-    margin-left: 35px;
-    color: black;
-    border-radius: 15px;
-    border: 3px solid black;
-    padding: 10px 20px;
-    text-decoration: none;
-    background-color:white ;
-  }
-  .allcompute a:hover{
-    background-color: LightGrey;
   }
 }
 
