--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/css/css.css
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/css/css.css
@@ -53,7 +53,6 @@ body{
   }
   #checkboxinput{
     color: black;
-    font-family: 'myfont';
     font-size: 18px;
     width: 70px;
   }
@@ -284,6 +283,9 @@ body{
     vertical-align: middle;
   }
   .first input{
+    font-size: 18px;
+    text-align: center;
+    border-radius: 10px;
     display: block;
     margin: 5px auto;
     width: 80%;
@@ -296,7 +298,6 @@ body{
     height: 40px;
     width: 100px;
     color: black;
-    font-family: 'myfont';
   }
   .Checkbox{
     margin-top: 1px;
