添加字蛛压缩字体减少页面加载时间，添加EOT字体支持

--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/css/css.css
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/css/css.css
@@ -7,7 +7,8 @@ body{
 }
 @font-face {
   font-family: myfont;
-  src: url(../font/方正粗圆.ttf);
+  src: url(../font/方正粗圆.ttf),
+  url(../font/方正粗圆.eot);
 }
 @media screen and (min-width: 730px){
   body{
@@ -330,6 +331,7 @@ body{
   .Checkbox div >div>span{
     margin-right: 5px;
     vertical-align: middle;
+    font-family: 'myfont';
   }
   .firstbox{
     font-family: myfont;
