--- a/Division2DC/css/css.css
+++ b/Division2DC/css/css.css
@@ -1,7 +1,5 @@
 *{
   color: white;/*全局字体颜色*/
-}
-body{
   margin: 0;
   padding: 0;
 }
@@ -11,54 +9,73 @@ body{
   url(../font/方正粗圆.eot);
 }
 @media screen and (min-width: 730px){
+  *{
+    color: black;/*全局字体颜色*/
+  }
   body{
-    background-image:url("../imgs/background-imgs.png") ;
-    background-size: cover;
-    background-attachment:fixed; /* 页面保持不变 */
+    background-color: rgb(240, 240, 240);
   }
   .title{
     text-align: center;
     color: rgb(255, 144, 40);
     font-family: myfont;
     margin-top: 0;
-    background-color: rgba(10, 10, 10, 0.5);
     padding-top: 30px;
     padding-bottom: 30px;
   }
+  .bodyGui{
+    margin-bottom: 200px;
+    margin-top: 30px;
+    position: relative;
+  }
   .all{
-    display: block;
-    width: 40%;
-    margin-right: 40%;
-    margin-left:25% ;
-    background-color:rgba(6, 6, 6, 0.5);
-    padding: 5% 5%;
+    border-right: 3px solid orange;
+    border-radius: 0 5px 5px 0;
+    display: inline-block;
+    width: 55%;
+    background-color:rgba(255, 166, 0, 0.05);
+    padding: 1%;
     border-bottom: 3px solid orange;
     border-top: 3px solid orange;
-    
   }
   .first{
     text-align: center;
+    font-size: 0;
+  }
+  .first p{
+    font-size: 18px;
+    margin-top: 10px;
   }
   .first input{
+    margin-top: 5px;
+    border-bottom: 1px solid rgba(255, 166, 0, 1);
+    border-top: 0px;
+    border-left: 1px solid rgba(255, 166, 0, 1);
+    border-right: 1px solid rgba(255, 166, 0, 1);
+    background-color: rgba(255, 166, 0, 0.05);
+    text-align: center;
     font-size: 18px;
     display: block;
-    margin: 5px auto;
-    width: 300px;
     height: 30px;
-    border-radius: 10px;
     color: black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    outline: none;
   }
   .first p{
     display: inline-block;
     font-family: 'myfont';
   }
   #checkboxinput{
+    background-color: rgba(255, 166, 0, 0.05);
     text-align: center;
-    border-radius: 10px;
+    border-radius: 2px;
+    border-top: 0;
+    border-bottom: 2px solid rgba(255, 166, 0, 1);
+    border-left: 1px solid rgba(255, 166, 0, 1);
+    border-right: 1px solid rgba(255, 166, 0, 1);
     color: black;
     font-size: 18px;
     width: 70px;
+    outline: none;
   }
   .Checkbox{
     margin-top: 40px;
@@ -76,159 +93,174 @@ body{
     vertical-align: middle;
     color: black;
   }
-  .firstbox{
-    font-family: myfont;
+  .TalentType{
+    text-align: center;
+    margin-bottom: 10px;
   }
-  .firstbox h2{
-    color:gold;
+  .TalentType a{
+    border-left: 1px solid rgba(255, 166, 0, 1);
+    border-right: 1px solid rgba(255, 166, 0, 1);
+    font-family: 'myfont';
+    display: inline-block;
+    font-size: 20px;
+    width: 14%;
+    background-color:rgba(255, 166, 0, 0.1);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    user-select: none;
+  }
+  .TalentTypeA{
+    border-left: 1px solid rgba(255, 166, 0, 1);
+    border-right: 1px solid rgba(255, 166, 0, 1);
+    border-bottom: 5px solid rgba(255, 166, 0, 1);
+    font-family: 'myfont';
+    display: inline-block;
+    font-size: 20px;
+    width: 14%;
+    background-color:rgba(255, 166, 0, 0.1);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    user-select: none;
+  }    
+  .TalentType a:hover{
+    background-color: rgba(0, 0, 0, 0);
+  }
+  .firstbox{
+    font-family: 'myfont';
   }
   .secondbox{
-    font-family: myfont;
-  }
-  .secondbox h2{
-    color:gold;
+    font-family: 'myfont';
   }
   .thirdbox{
-    font-family: myfont;
-  }
-  .thirdbox h2{
-    color:gold;
+    font-family: 'myfont';
   }
   .fourthbox{
-    font-family: myfont;
-  }
-  .fourthbox h2{
-    color:	red;
+    font-family: 'myfont';
   }
   .fifthbox{
-    font-family: myfont;
-  }
-  .fifthbox h2{
-    color:lightgreen;
+    font-family: 'myfont';
   }
   .sixthbox{
-    font-family: myfont;
-  }
-  .sixthbox h2{
-    color: LightBLue;
+    font-family: 'myfont';
   }
   .seventhbox{
-    font-family: myfont;
-  }
-  .seventhbox h2{
-    color:	orange;
+    font-family: 'myfont';
   }
   .allcompute{
-    font-size: 9px;
+    font-size: 11px;
     float: right;
     position: absolute;
-    right: 3.7%;
-    top: 125px;
-    padding:1% 0px 0px 1%;
-    width: 20%;
-    background-color: rgba(0, 0, 0, 0.7);
+    right: 0;
+    top: 0;
+    padding:0 1% 1%;
+    width: 35%;
+    background-color: rgba(255, 166, 0, 0.05);
     border-left: 3px solid orange;
+    border-bottom: 3px solid orange;
+    line-height: 30px;
+    border-radius: 5px 0 0 5px;
   }
   .allcomputeFive{
-    font-size: 9px;
+    font-size: 11px;
     float: right;
     position: fixed;
-    right: 3.7%;
-    top: 0px;
-    padding:1% 0px 0px 1%;
-    width:20%;
-    background-color: rgba(0, 0, 0, 0.7);
+    right: 0;
+    top: 0;
+    padding:0 1% 1%;
+    width:35%;
+    background-color: rgba(255, 166, 0, 0.05);
     border-left: 3px solid orange;
+    border-bottom: 3px solid orange;
     z-index: 9999;
+    line-height: 30px;
+    border-radius: 5px 0 0 5px;
   }
-  .allcompute p{
+  .allcomputebutton{
+    border-radius: 0 5px 5px 0;
+    border-left: 5px solid grey;
+    background: rgba(255, 166, 0, 0.05);
+    padding-left: 5px;
+    display: inline;
+    margin-top: 5px;
     font-family: 'myfont';
     font-size: 18px;
-    vertical-align: middle;
   }
-  .allcomputeFive p{
+  .allcomputebuttons{
+    border-radius: 0 5px 5px 0;
+    border-left: 5px solid rgb(153, 255, 0);
+    background: rgba(255, 166, 0, 0.05);
+    padding-left: 5px;
+    display: inline;
+    margin-top: 5px;
     font-family: 'myfont';
     font-size: 18px;
-    vertical-align: middle;
-  }
-  .allcompute p > input{
-    width: 18px;
-    height: 18px;
-    vertical-align: middle;
-    color: black;
-  }
-  .allcomputeFive p > input{
-    width: 19px;
-    height: 17px;
-    vertical-align: middle;
-    color: black;
   }
   .allcompute a{
-    font-size: 25px;
-    margin-left: 28%;
-    color: black;
-    border-radius: 5px;
-    box-shadow: inset -6px -6px 16px rgb(76 76 76), -2px -2px 10px rgb(172 172 172);
-    padding: 5px 25px;
+    display: block;
+    width: 98.6%;
+    text-align: center;
+    padding: 5px;
     text-decoration: none;
-    background-color:white ;
+    font-size: 30px;
+    background-color:rgba(255, 166, 0, 0.05) ;
     font-family: 'myfont';
+    position: absolute;
+    left: 0;
+    border-bottom: 5px solid orange;
+    border-radius: 5px 0 0 0;
+    border-top: 3px solid orange;
   }
   .allcomputeFive a{
-    font-size: 25px;
-    margin-left: 28%;
-    color: black;
-    border-radius: 5px;
-    box-shadow: inset -6px -6px 16px rgb(76 76 76), -2px -2px 10px rgb(172 172 172);
-    padding: 5px 25px;
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 5px;
     text-decoration: none;
+    font-size: 30px;
     background-color:white ;
     font-family: 'myfont';
+    position: absolute;
+    left: 0;
+    border-bottom: 5px solid black;
+    border-radius: 5px 0 0 0;
   }
   .allcompute a:hover{
-    background-color: white;
-    box-shadow:  inset 6px 6px 16px rgb(76 76 76), 2px 2px 10px rgb(172 172 172);
+    color: black;
+    border-bottom:5px solid rgb(231, 150, 0);
+    background-color: rgba(255, 166, 0, 0.2);
   }
   .allcomputeFive a:hover{
-    background-color: white;
-    box-shadow:  inset 6px 6px 16px rgb(76 76 76), 2px 2px 10px rgb(172 172 172);
+    color: rgb(255, 255, 255);
+    border-bottom:5px solid white;
+    background-color: rgb(0, 0, 0);
   }
   .aspacing{
-    height: 20px;
+    height: 50px;
   }
   .star{
     text-decoration: none;
+    color: black;
   }
   .star:hover{
-    color: aqua;
+    color: rgb(0, 196, 196);
   }
   .tips{
     font-family: 'myfont';
     font-size: 18px;
-    float: left;
-    position: absolute;
-    left: 10px;
-    top: 125px;
-    padding:0px 15px 15px 15px;
-    width:20%;
-    background-color: rgba(0, 0, 0, 0.6);
-    border-right: 3px solid orange;
+    width:100%;
+    margin: 0 auto;
+    border-bottom: 5px solid orange;
+    border-top: 5px solid orange;
+    box-sizing: border-box;
+    padding: 30px 30px 30px 30px;
+    text-align: center;
+    background-color: rgba(255, 166, 0, 0.05);
   }
-  .tipsFive{
-    font-family: 'myfont';
-    font-size: 18px;
-    float: left;
-    position: fixed;
-    left: 10px;
-    top: 0px;
-    padding:0px 15px 15px 15px;
-    width: 20%;
-    background-color: rgba(0, 0, 0, 0.6);
-    border-right: 3px solid orange;
+  .tips p{
+    color: black;
   }
   .End{
-    background-color: rgba(0, 0, 0, 0.6);
-    width: 915px;
+    background-color: rgba(255, 166, 0, 0.05);
     padding: 0.5%;
     position: relative;
     margin: 50px auto 0;
@@ -240,7 +272,7 @@ body{
   }
   .endk span{
     font-size: 18px;
-    color: white;
+    color: black;
     font-family: 'myfont';
     display: inline-block;
     width: 200px;
@@ -255,301 +287,269 @@ body{
     font-size: 18px;
     text-align: right;
     display: inline-block;
-    color: white;
+    color: black;
     margin: 0 0 0 0;
   }
 }
 @media screen and (max-width:730px){
+  *{
+    color: black;/*全局字体颜色*/
+  }
   body{
-    background-image:url("../imgs/max-960.png") ;
-    background-size: cover;
-    background-attachment:fixed; /* 页面保持不变 */
+    background-color: rgb(240, 240, 240);
   }
   .title{
     text-align: center;
     color: rgb(255, 144, 40);
-    font-family: "myfont";
-    font-size: 50px;
+    font-family: myfont;
+    margin-top: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .bodyGui{
+    margin-bottom: 200px;
+    margin-top: 20px;
+    position: relative;
   }
   .all{
+    box-sizing: border-box;
+    border: 3px solid orange;
+    border-radius: 5px;
     display: inline-block;
-    border: solid 1px rgba(0, 0, 0, 0);
-    width: 50%;
-    margin-left: 1%;
-    background-color:rgba(6, 6, 6, 0.468);
+    width: 100%;
+    background-color:rgba(255, 166, 0, 0.05);
+    padding: 1%;
   }
   .first{
     text-align: center;
+    font-size: 0;
   }
   .first p{
-    font-family: myfont;
-    font-size: 50px;
-    vertical-align: middle;
+    font-size: 18px;
+    margin-top: 10px;
+    width: 45%;
   }
   .first input{
-    font-size: 25px;
+    width: 100%;
+    margin-top: 5px;
+    border-bottom: 1px solid rgba(255, 166, 0, 1);
+    border-top: 0px;
+    border-left: 1px solid rgba(255, 166, 0, 1);
+    border-right: 1px solid rgba(255, 166, 0, 1);
+    background-color: rgba(255, 166, 0, 0.05);
     text-align: center;
-    border-radius: 10px;
+    font-size: 18px;
     display: block;
-    margin: 5px auto;
-    width: 80%;
-    height: 35px;
-    border-radius: 8px;
+    height: 30px;
     color: black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    outline: none;
+  }
+  .first p{
+    display: inline-block;
+    font-family: 'myfont';
   }
   #checkboxinput{
-    font-size: 25px;
-    border-radius: 10px;
+    background-color: rgba(255, 166, 0, 0.05);
     text-align: center;
-    height: 40px;
-    width: 100px;
+    border-radius: 2px;
+    border-top: 0;
+    border-bottom: 2px solid rgba(255, 166, 0, 1);
+    border-left: 1px solid rgba(255, 166, 0, 1);
+    border-right: 1px solid rgba(255, 166, 0, 1);
     color: black;
+    font-size: 18px;
+    width: 70px;
+    outline: none;
   }
   .Checkbox{
-    margin-top: 1px;
-  }
-  .Checkbox h2{
-    font-size: 70px;
-    margin: 0 0 0 20px; 
-  }
-  .Checkbox span{
-    font-size: 35px;
-  }
-  .Checkbox div{
     margin-top: 40px;
   }
   .Checkbox div >div{
-    margin: 10px;
-    padding-left: 10px;
+    display: inline-block;
+    line-height: 50px;
+    padding-left: 5%;
+    font-size: 18px;
   }
-  .Checkbox div >div>input{
-    width: 60px;
-    height: 40px;
+  .Checkbox div div input{
+    width: 20px;
+    height: 20px;
     vertical-align: middle;
+    color: black;
   }
-  .Checkbox div >div>span{
-    margin-right: 5px;
-    vertical-align: middle;
+  .TalentType{
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    width: 100%;
+  }
+  .TalentType a{
+    text-align: center;
+    border-left: 1px solid rgba(255, 166, 0, 1);
+    border-right: 1px solid rgba(255, 166, 0, 1);
     font-family: 'myfont';
+    font-size: 20px;
+    width: 11%;
+    background-color:rgba(255, 166, 0, 0.1);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    user-select: none;
+    writing-mode: vertical-rl;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    writing-mode: tb-rl;
+    height: 20%;
+  }
+  .TalentTypeA{
+    text-align: center;
+    border-left: 1px solid rgba(255, 166, 0, 1);
+    border-right: 1px solid rgba(255, 166, 0, 1);
+    border-bottom: 5px solid rgba(255, 166, 0, 1);
+    font-family: 'myfont';
+    font-size: 20px;
+    width: 11%;
+    background-color:rgba(255, 166, 0, 0.1);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    user-select: none;
+    writing-mode: vertical-rl;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    writing-mode: tb-rl;
+    height: 20%;
+    height: 20%;
+  }    
+  .TalentType a:hover{
+    background-color: rgba(0, 0, 0, 0);
   }
   .firstbox{
     font-family: 'myfont';
-  }
-  .firstbox h2{
-    color:gold;
-    -webkit-text-size-adjust:none;
-  }
-  .firstbox span{
-    -webkit-text-size-adjust:none;
+    display: inline-block;
   }
   .secondbox{
     font-family: 'myfont';
   }
-  .secondbox h2{
-    color:gold;
-    -webkit-text-size-adjust:none;
-  }
-  .secondbox span{
-    -webkit-text-size-adjust:none;
-  }
   .thirdbox{
     font-family: 'myfont';
-  }
-  .thirdbox h2{
-    color:gold;
-    -webkit-text-size-adjust:none;
-  }
-  .thirdbox span{
-    -webkit-text-size-adjust:none;
   }
   .fourthbox{
     font-family: 'myfont';
   }
-  .fourthbox h2{
-    color:	red;
-    -webkit-text-size-adjust:none;
-  }
-  .fourthbox span{
-    -webkit-text-size-adjust:none;
-  }
-  .ffifthbox{
+  .fifthbox{
     font-family: 'myfont';
-  }
-  .fifthbox h2{
-    color:lightgreen;
-    -webkit-text-size-adjust:none;
-  }
-  .fifthbox span{
-    -webkit-text-size-adjust:none;
   }
   .sixthbox{
     font-family: 'myfont';
   }
-  .sixthbox h2{
-    color: LightBLue;
-    -webkit-text-size-adjust:none;
-  }
-  .sixthbox span{
-    -webkit-text-size-adjust:none;
-  }
   .seventhbox{
     font-family: 'myfont';
   }
-  .seventhbox h2{
-    color:	orange;
-    -webkit-text-size-adjust:none;
-  }
-  .seventhbox span{
-    -webkit-text-size-adjust:none;
-  }
-  .usculation{
-    margin-left: 15px;
-  }
-  .usculation p{
-    font-size: 30px;
-    font-family: 'myfont';
-  }
-  .usculation p input{
-    width: 28px;
-    height: 28px;
-    margin-right: 15px;
-  }
-  .bodyGui{
-    position: relative;
-    margin-top: 10px;
-  }
   .allcompute{
-    position: absolute;
-    top: 0;
-    right: 1%;
-    font-size: 20px;
-    display: inline-block;
-    background-color: rgba(0, 0, 0, 0.7);
-    width: 45%;
+    font-size: 11px;
+    padding:0 1% 1%;
+    width: 100%;
+    background-color: rgba(255, 166, 0, 0.05);
+    border-left: 3px solid orange;
+    border-bottom: 3px solid orange;
+    border-right: 3px solid orange;
+    line-height: 30px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
   }
-  .allcomputeFive{
-    font-size: 20px;
-    -webkit-text-size-adjust:none;
-    float: right;
-    position: fixed;
-    right: 1%;
-    top: 0px;
-    width: 45%;
-    background-color: rgba(0, 0, 0, 0.7);
-    margin-left: 25%;
-  }
-  .allcompute > p{
-    font-size: 32px;
+  .allcomputebutton{
+    border-radius: 0 5px 5px 0;
+    border-left: 5px solid grey;
+    background: rgba(255, 166, 0, 0.05);
+    padding-left: 5px;
+    display: inline;
+    margin-top: 5px;
     font-family: 'myfont';
-    vertical-align: middle;
+    font-size: 18px;
   }
-  .allcomputeFive > p{
-    font-size: 32px;
+  .allcomputebuttons{
+    border-radius: 0 5px 5px 0;
+    border-left: 5px solid rgb(153, 255, 0);
+    background: rgba(255, 166, 0, 0.05);
+    padding-left: 5px;
+    display: inline;
+    margin-top: 5px;
     font-family: 'myfont';
-    vertical-align: middle;
-  }
-  .allcompute > p > input{
-    width: 30px;
-    height: 30px;
-    vertical-align: middle;
-    color: black;
-  }
-  .allcomputeFive > p > input{
-    width: 30px;
-    height: 30px;
-    vertical-align: middle;
-    color: black;
+    font-size: 18px;
   }
   .allcompute a{
-    font-size: 50px;
-    height: 80px;
-    line-height: 80px;
-    text-align: center;
-    background-color: rgb(255, 166, 0);
     display: block;
-    width: 100%;
-    color: white;
-    font-family: 'myfont';
-    position: relative;
-    left: 0;
-    text-decoration: none;
-  }
-  .allcomputeFive a{
-    font-size: 50px;
-    height: 80px;
-    line-height: 80px;
+    width: 98.6%;
     text-align: center;
-    background-color: rgb(255, 166, 0);
-    display: block;
-    width: 100%;
-    color: white;
-    font-family: 'myfont';
-    position: relative;
-    left: 0;
+    padding: 5px;
     text-decoration: none;
+    font-size: 30px;
+    background-color:rgba(255, 166, 0, 0.05) ;
+    font-family: 'myfont';
+    position: absolute;
+    left: 0;
+    border-bottom: 5px solid orange;
+    border-radius: 5px 0 0 0;
+    border-top: 3px solid orange;
   }
   .allcompute a:hover{
-    background-color: rgb(231, 150, 0);
-  }
-  .allcomputeFive a:hover{
-    background-color: rgb(231, 150, 0);
+    color: black;
+    border-bottom:5px solid rgb(231, 150, 0);
+    background-color: rgba(255, 166, 0, 0.2);
   }
   .aspacing{
-    height: 0;
+    height: 50px;
   }
   .star{
     text-decoration: none;
+    color: black;
   }
   .star:hover{
-    color: aqua;
+    color: rgb(0, 196, 196);
   }
   .tips{
     font-family: 'myfont';
-    font-size: 40px;
-    padding: 10px;
-    line-height: 45px;
-    background-color: rgba(0, 0, 0, 0.6);
-    margin:auto ;
+    font-size: 18px;
+    width:100%;
+    margin: 0 auto;
+    border-bottom: 5px solid orange;
+    border-top: 5px solid orange;
+    box-sizing: border-box;
+    padding: 30px 30px 30px 30px;
+    text-align: center;
+    background-color: rgba(255, 166, 0, 0.05);
   }
   .tips p{
-    color: white;
-    margin: 20px;
-  }
-  .tipsFive{
-    font-family: 'myfont';
-    font-size: 35px;
-    padding: 10px;
-    line-height: 40px;
-    background-color: rgba(0, 0, 0, 0.6);
-    margin:auto ;
-  }
-  .tipsFive p{
-    color: white;
-    margin: 0;
+    color: black;
   }
   .End{
     display: none;
   }
   .endk{
     display: inline-block;
+    margin: 0 0 0 1%;
   }
   .endk span{
-    font-size: 14px;
-    color: white;
+    font-size: 18px;
+    color: black;
     font-family: 'myfont';
     display: inline-block;
     width: 200px;
   }
   .endf{
-    float: right;
+    display: inline-block;
+    position: absolute;
+    right: 1%;
   }
   .endf p{
     font-family: 'myfont';
-    font-size: 14px;
-    -webkit-text-size-adjust:none;
+    font-size: 18px;
+    text-align: right;
     display: inline-block;
-    color: white;
+    color: black;
+    margin: 0 0 0 0;
   }
 }
 
