--- a/Division2DC/css/css.css
+++ b/Division2DC/css/css.css
@@ -24,9 +24,10 @@
     padding-bottom: 30px;
   }
   .bodyGui{
-    margin-bottom: 200px;
+    margin-bottom: 60px;
     margin-top: 30px;
     position: relative;
+    vertical-align: top;
   }
   .all{
     border-right: 3px solid orange;
@@ -37,6 +38,9 @@
     padding: 1%;
     border-bottom: 3px solid orange;
     border-top: 3px solid orange;
+    vertical-align: top;
+    position: relative;
+    right: 37.5%;
   }
   .first{
     text-align: center;
@@ -148,10 +152,8 @@
   }
   .allcompute{
     font-size: 11px;
-    float: right;
-    position: absolute;
-    right: 0;
-    top: 0;
+    position: relative;
+    left: 62.7%;
     padding:0 1% 1%;
     width: 35%;
     background-color: rgba(255, 166, 0, 0.05);
@@ -159,38 +161,25 @@
     border-bottom: 3px solid orange;
     line-height: 30px;
     border-radius: 5px 0 0 5px;
-  }
-  .allcomputeFive{
-    font-size: 11px;
-    float: right;
-    position: fixed;
-    right: 0;
-    top: 0;
-    padding:0 1% 1%;
-    width:35%;
-    background-color: rgba(255, 166, 0, 0.05);
-    border-left: 3px solid orange;
-    border-bottom: 3px solid orange;
-    z-index: 9999;
-    line-height: 30px;
-    border-radius: 5px 0 0 5px;
+    display: inline-block;
   }
   .allcomputebutton{
     border-radius: 0 5px 5px 0;
     border-left: 5px solid grey;
     background: rgba(255, 166, 0, 0.05);
     padding-left: 5px;
-    display: inline;
+    display: inline-block;
     margin-top: 5px;
     font-family: 'myfont';
     font-size: 18px;
+    vertical-align: top;
   }
   .allcomputebuttons{
     border-radius: 0 5px 5px 0;
     border-left: 5px solid rgb(153, 255, 0);
     background: rgba(255, 166, 0, 0.05);
     padding-left: 5px;
-    display: inline;
+    display: inline-block;
     margin-top: 5px;
     font-family: 'myfont';
     font-size: 18px;
